--- a/app/src/main/res/layout/fab_capture.xml
+++ b/app/src/main/res/layout/fab_capture.xml
@@ -27,7 +27,7 @@
             android:id="@+id/fab_capture_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_backgroud"
+            android:background="@drawable/selector_icon"
             android:padding="5dp"
             android:scaleType="center"
             app:materialIcon="home"
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:background="@drawable/round_backgroud"
+            android:background="@drawable/selector_icon"
             android:padding="5dp"
             android:scaleType="center"
             app:materialIcon="lock_open"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:background="@drawable/round_backgroud"
+            android:background="@drawable/selector_icon"
             android:padding="5dp"
             android:scaleType="center"
             app:materialIcon="close"
