--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -23,6 +23,22 @@
         android:hint="请输入姓名"
         android:textColorHint="@color/colorGray"
         android:textCursorDrawable="@drawable/shape_cursor_color" />
+    <EditText
+        android:id="@+id/et_forgetPassword_mobileNumber"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="25dp"
+        android:hint="请输入手机号码"
+        android:textColorHint="@color/colorGray"
+        android:textCursorDrawable="@drawable/shape_cursor_color" />
+    <EditText
+        android:id="@+id/et_forgetPassword_email"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="25dp"
+        android:hint="请输入邮箱地址"
+        android:textColorHint="@color/colorGray"
+        android:textCursorDrawable="@drawable/shape_cursor_color" />
     <!-- 密码输入框 -->
     <EditText
         android:id="@+id/et_forgetPassword_password"
